# apps/api/docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /api
 definitions:
+  handlers.ChangePasswordInput:
+    properties:
+      current_password:
+        type: string
+      new_password:
+        minLength: 8
+        type: string
+    required:
+    - current_password
+    - new_password
+    type: object
   handlers.CreateConversationRequest:
     properties:
       user_id:
@@ -41,27 +52,6 @@ definitions:
     required:
     - content
     - message_type
-    type: object
-  handlers.CreateUserRequest:
-    properties:
-      email:
-        example: john@example.com
-        type: string
-      password:
-        example: secretpass123
-        minLength: 6
-        type: string
-      phone:
-        example: "+1234567890"
-        type: string
-      username:
-        example: johndoe
-        type: string
-    required:
-    - email
-    - password
-    - phone
-    - username
     type: object
   handlers.ErrorResponse:
     properties:
@@ -120,6 +110,33 @@ definitions:
       user_id:
         type: string
     type: object
+  models.CreateUserInput:
+    properties:
+      email:
+        type: string
+      password:
+        minLength: 8
+        type: string
+      phone:
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - password
+    - phone
+    - username
+    type: object
+  models.LoginInput:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
   models.Message:
     properties:
       content:
@@ -167,12 +184,12 @@ definitions:
     - location
     type: string
     x-enum-varnames:
-    - MessageTypeText
-    - MessageTypeImage
-    - MessageTypeVideo
-    - MessageTypeAudio
-    - MessageTypeFile
-    - MessageTypeLocation
+    - TextMessage
+    - ImageMessage
+    - VideoMessage
+    - AudioMessage
+    - FileMessage
+    - LocationMessage
   models.User:
     properties:
       avatar_url:
@@ -562,12 +579,12 @@ paths:
       - application/json
       description: Register a new user in the system
       parameters:
-      - description: User information
+      - description: User registration info
         in: body
         name: user
         required: true
         schema:
-          $ref: '#/definitions/handlers.CreateUserRequest'
+          $ref: '#/definitions/models.CreateUserInput'
       produces:
       - application/json
       responses:
@@ -583,42 +600,10 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-      summary: Create a new user
+      summary: Register a new user
       tags:
       - users
   /users/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Soft delete a user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete user
-      tags:
-      - users
     get:
       consumes:
       - application/json
@@ -649,16 +634,70 @@ paths:
       summary: Get user by ID
       tags:
       - users
+  /users/login:
+    post:
+      consumes:
+      - application/json
+      description: Authenticate a user and return their details
+      parameters:
+      - description: Login credentials
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Login user
+      tags:
+      - users
+  /users/me:
+    get:
+      consumes:
+      - application/json
+      description: Get the profile of the currently authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get current user profile
+      tags:
+      - users
     put:
       consumes:
       - application/json
-      description: Update user information
+      description: Update the profile of the currently authenticated user
       parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
       - description: User information
         in: body
         name: user
@@ -680,13 +719,47 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-        "500":
-          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Update current user profile
+      tags:
+      - users
+  /users/me/password:
+    put:
+      consumes:
+      - application/json
+      description: Change the password of the currently authenticated user
+      parameters:
+      - description: Password change info
+        in: body
+        name: passwords
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.ChangePasswordInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Update user
+      summary: Change user password
       tags:
       - users
 securityDefinitions:
